# rentomatic

./: Pipfile  cli.py  pyproject.toml
tests/domain/: test_room.py
tests/repository/: test_memrepo.py
tests/use_cases/: test_room_list.py
