[tool.poetry]
name = "rentomatic"
version = "0.1.0"
description = ""
authors = ["Jaesung Ryu <cwryu6252@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.3"
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
coverage = "^6.4.2"
pytest-cov = "^3.0.0"
pytest-flask = "^1.2.0"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
